2015-04-13  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* users/20159: Completion/Zsh/Command/_zstyle: completion: zstyle:
	Add 'show-ambiguity'

	* 34886: Completion/Unix/Command/_git: completion: git: Complete
	rebase --exec argument

	* 34885: Completion/Unix/Command/_git: completion: git: Sort
	"commit object" completions most recent first

	* 34885: Completion/Unix/Command/_git: completion: git: Fix
	another instance of the 34671 bug fixed in 34814

2015-04-13  Peter Stephenson  <p.stephenson@samsung.com>

	* Han Pingtian: 34880: Doc/Zsh/options.yo: POSIX_TRAPS doc.

	* Han Pingtian: 34875: Doc/Zsh/options.yo: CSH_JUNKIE_HISTORY doc.

	* Han Pingtian: users/20078: Doc/Zsh/options.yo: HIST_BEEP doc.

2015-04-10  Clint Adams  <clint@zsh.org>

	* 34874: Completion/Unix/Command/_cabal: completion for cabal
	command from cabal-install.

2015-04-10  Daniel Hahler  <git@thequod.de>

	* 34748: Completion/Unix/Command/_git: completion: git: update
	list of builtintools

2015-04-07  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 34850: Doc/zman.yo, Doc/ztexi.yo, Doc/META-FAQ.yo,
	Doc/Zsh/contrib.yo, Doc/Zsh/ftp_sites.yo, Doc/Zsh/manual.yo,
	Doc/Zsh/metafaq.yo, Doc/Zsh/roadmap.yo: make URLs in html/pdf
	docs clickable

2015-04-06  Barton E. Schaefer  <schaefer@zsh.org>

	* 34851: Src/builtin.c: fix thinko from 34093 that short-circuited
	some "whence -m" searches

2015-04-03  Barton E. Schaefer  <schaefer@zsh.org>

	* 34837: Src/glob.c: avoid loss of original file path when applying
	colon-modifiers in glob qualifiers, that path is still needed for
	later stat() when sorting.

2015-04-03  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 34840: Doc/Zsh/prompt.yo: minor format fixes

2015-04-02  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 34836: Doc/Zsh/prompt.yo: fix description of '%-0<<'

2015-04-01  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 34814: Completion/Unix/Command/_git: completion: git: Fix