@@ -1,3 +1,9 @@
+2015-04-15  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* 34887: Src/exec, Test/E01options.ztst: assignments before
+	"command special-builtin/func" in POSIX_BUILTINS mode behave as
+	normal command. Tidy up case handling in code and add test.
+
 2015-04-13  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
 	* users/20159: Completion/Zsh/Command/_zstyle: completion: zstyle:
